syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "RSoft.Account.Grpc.PaymentMethod";

// message contracts

// service definitions
service PaymentMethod {
	rpc CreatePaymentMethod (CreatePaymentMethodRequest) returns (CreatePaymentMethodReply);
	rpc UpdatePaymentMethod (UpdatePaymentMethodRequest) returns (UpdatePaymentMethodReply);
	rpc EnablePaymentMethod (ChangeStatusPaymentMethodRequest) returns (ChangeStatusPaymentMethodReply);
	rpc DisablePaymentMethod (ChangeStatusPaymentMethodRequest) returns (ChangeStatusPaymentMethodReply);
	rpc GetPaymentMethod (GetPaymentMethodRequest) returns (GetPaymentMethodReply);
	rpc ListPaymentMethod (ListPaymentMethodRequest) returns (ListPaymentMethodReply);
}

// messages types

message NullableTimestamp {
  oneof kind {
    google.protobuf.NullValue null = 1;
    google.protobuf.Timestamp data = 2;
  }
}

message AuthorDetail {
	string id = 1;
	string name = 2;
}
message NullableAuthorDetail {
  oneof kind {
    google.protobuf.NullValue null = 1;
    AuthorDetail data = 2;
  }
}

message PaymentMethodDetail {
	string id = 1;
	string name = 2;
	int32  payment_type = 3;
	bool is_active = 4;
	google.protobuf.Timestamp created_on = 5;
	AuthorDetail created_by = 6;
	NullableTimestamp changed_on = 7;
	NullableAuthorDetail changed_by = 8;
}

// messages contracts

message CreatePaymentMethodRequest {
	string name = 1;
	int32 payment_type = 2;
}
message CreatePaymentMethodReply {
	string id = 1;
}

message UpdatePaymentMethodRequest {
	string id = 1;
	string name = 2;
	int32 payment_type = 3;
}
message UpdatePaymentMethodReply {
}

message ChangeStatusPaymentMethodRequest {
	string id = 1;
}
message ChangeStatusPaymentMethodReply {
}

message GetPaymentMethodRequest {
	string id = 1;
}
message GetPaymentMethodReply {
	PaymentMethodDetail data = 1;
}

message ListPaymentMethodRequest {
}
message ListPaymentMethodReply {
	repeated PaymentMethodDetail data = 1;
}